<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.nju.seg.sisd</groupId>
    <artifactId>Parcel</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>SISD</name>

    <properties>
        <maven.compiler.source>20</maven.compiler.source>
        <maven.compiler.target>20</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.dependency.relativepath>dependency</project.dependency.relativepath>
        <project.dependency.path>${project.build.directory}/${project.dependency.relativepath}</project.dependency.path>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.jcabi</groupId>
            <artifactId>jcabi-xml</artifactId>
            <version>0.25.4</version>
        </dependency>

        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
            <version>0.10.4</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>23.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.github.petitparser</groupId>
            <artifactId>petitparser-core</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.sosy-lab</groupId>
            <artifactId>java-smt</artifactId>
            <version>4.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.sosy-lab</groupId>
            <artifactId>javasmt-solver-z3</artifactId>
            <version>4.12.2</version>
            <type>jar</type>
            <classifier>com.microsoft.z3</classifier>
        </dependency>
        <dependency>
            <groupId>org.sosy-lab</groupId>
            <artifactId>javasmt-solver-z3</artifactId>
            <version>4.12.2</version>
            <type>dylib</type>
            <classifier>libz3</classifier>
        </dependency>
        <dependency>
            <groupId>org.sosy-lab</groupId>
            <artifactId>javasmt-solver-z3</artifactId>
            <version>4.12.2</version>
            <type>dylib</type>
            <classifier>libz3java</classifier>
        </dependency>
        <!-- Logback Classic Module -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.13</version>
        </dependency>

    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifest>
                                <mainClass>edu.nju.seg.isd.sisd.lab.Lab</mainClass>
                            </manifest>
                        </archive>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>parcel</id>
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                    <configuration>
                        <argLine>-Djava.library.path=${project.dependency.path}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                    <configuration>
                        <excludes>
                            <exclude>**/*.dylib</exclude>
                        </excludes>
                        <archive>
                            <manifest>
                                <!-- For solvers with native binaries, you need to add the classpath to test properly.
                                     This path needs to be the location of the sosy-lab.commons.jar and the solver binaries.
                                     See maven-dependency-plugin below for more information. -->
                                <addClasspath>true</addClasspath>
                                <classpathPrefix>${project.dependency.relativepath}</classpathPrefix>
                                <mainClass>edu.nju.seg.isd.sisd.lab.Lab</mainClass>
                            </manifest>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.2.0</version>
                    <executions>
                        <execution>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${project.build.directory}/natives</outputDirectory>
                                <resources>
                                    <resource>
                                        <directory>${project.basedir}/src/main/resources/natives</directory>
                                        <includes>
                                            <include>**/*.dylib</include>
                                        </includes>
                                    </resource>
                                </resources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <!-- The dependency plugin allows us to copy or delete files. -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <!-- The goal "copy" is used to change the name of the solver libraries (i.e. Z3)
                             from the name that is used internally in Maven to the normal name. -->
                        <id>copy</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                    </execution>
                    <execution>
                        <!-- This copies all dependencies to ${project.dependency.path}. -->
                        <!-- We do this, because the sosy-lab.commons dependency (in JavaSMT) searches the
                             native solver binaries (i.e. MathSAT or Z3) at specific locations and with specific names.
                             So we just copy the dependencies and set the classpath to this location.
                             You may of course change this if you know how to.
                             Default search locations for sosy-lab.commons:
                             (1) in its own folder (by far the easiest, just copy everything together) or
                             (2) in the "native library path" as returned by getNativeLibraryPath() in Java,
                             which is the directory ../native/<arch>-<os>/ relative to the JAR file of sosy-lab.commons,
                             with the following values depending on your system (arch=x86_64|x86; os=linux|windows|macosx). -->
                        <id>copy-dependencies</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <outputDirectory>${project.dependency.path}</outputDirectory>

                    <artifactItems>
                        <!-- Here we specify what we want to use for the goal "copy".
                             In our case we copy the solver dependencies (binaries) to change their names.
                             groupId/artifactId/version/type/classifier have to match the dependency!
                             We copy them to ${project.dependency.path} as this is the location
                             that copy-dependencies uses by default. destFileName specifies the final name.
                             You may only need some of the artifacts below, depending on what solver(s) you want.
                             Important: you NEED to set the classpath to ${project.dependency.path} or
                             wherever you have your sosy-lab.commons + solver binaries!   -->


                        <!-- Z3 has two native libraries -->
                        <artifactItem>
                            <groupId>org.sosy-lab</groupId>
                            <artifactId>javasmt-solver-z3</artifactId>
                            <type>dylib</type>
                            <classifier>libz3java</classifier>
                            <destFileName>libz3java.dylib</destFileName>
                        </artifactItem>
                        <artifactItem>
                            <groupId>org.sosy-lab</groupId>
                            <artifactId>javasmt-solver-z3</artifactId>
                            <type>dylib</type>
                            <classifier>libz3</classifier>
                            <destFileName>libz3.dylib</destFileName>
                        </artifactItem>

                    </artifactItems>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
